Fixing some z-index problems and making a few IE adjustiments

--- a/app/stylesheets/_on_the_spot.sass
+++ b/app/stylesheets/_on_the_spot.sass
@@ -1,5 +1,5 @@
 .on_the_spot_mouseover
-  background-color: rgb(0,150,0)
+  background-color: rgb(200,220,200)
   background-color: rgba(0,150,0,0.2)
 .on_the_spot_form
   &:after
@@ -19,7 +19,7 @@
       +border-radius(5px)
       +text-shadow(rgba(255,255,255,0.85), 1px, 1px, 0px)
     input:focus,textarea:focus,select:focus
-      background-color: rgb(0,150,0)
+      background-color: rgb(200,220,200)
       background-color: rgba(0,150,0,0.2)
     textarea
       padding-right: 28px
