--- a/app/stylesheets/_projects.sass
+++ b/app/stylesheets/_projects.sass
@@ -21,7 +21,7 @@
       position: absolute
       top: -5px
       left: -5px
-      z-index: 999
+      z-index: 100
     .project_header
       position: relative
       text-align: center
@@ -60,7 +60,7 @@
       top: 139px
       left: 0px
       width: 234px
-      z-index: 666
+      z-index: 100
     .project_owner
       color: #999
       padding-bottom: 8px
@@ -545,7 +545,7 @@
         border: 3px solid rgb(0,60,0)
         border: 3px solid rgba(0,60,0,0.6)
       input[type=text]:focus
-        background-color: rgb(0,150,0)
+        background-color: rgb(200,220,200)
         background-color: rgba(0,150,0,0.2)
       input.ok,textarea.ok
         background: url('/images/tick_32.png') no-repeat 96% center
