--- a/app/stylesheets/_slider.sass
+++ b/app/stylesheets/_slider.sass
@@ -2,7 +2,7 @@
   position: relative
 .navigation
   .prev,.next
-    z-index: 999
+    z-index: 400
     font-family: "museo-500" !important
     position: absolute
     top: 172px
