--- a/app/stylesheets/sites/multidao.sass
+++ b/app/stylesheets/sites/multidao.sass
@@ -145,7 +145,6 @@ body#site
             +horizontal-list(12px)
   .navigation
     .prev,.next
-      z-index: 999
       font-family: "Helvetica Neue", Helvetica, Arial, sans-serif !important
       font-weight: normal
       top: 0
